# SimdUtil

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: flags.cmake
include/simdutil/: allocator.hpp  cpuid.hpp
others/MsdnCpuId/: CMakeLists.txt  Makefile  main.cpp
